<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvNomeAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/nome_aluno"
        app:layout_constraintBottom_toTopOf="@+id/tvRa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/ra_aluno"
        app:layout_constraintBottom_toTopOf="@+id/tvTitulo"
        app:layout_constraintStart_toStartOf="@+id/tvNomeAluno"
        app:layout_constraintTop_toBottomOf="@+id/tvNomeAluno" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:text="@string/titulo"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/etId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRa" />

    <EditText
        android:id="@+id/etId"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:inputType="text"
        android:textColorHint="@color/cinza_hint"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/etValor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <EditText
        android:id="@+id/etValor"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="@string/valor"
        android:inputType="numberDecimal"
        android:textColorHint="@color/cinza_hint"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/etTaxa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etId" />

    <EditText
        android:id="@+id/etTaxa"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/taxa"
        android:inputType="numberDecimal"
        android:textColorHint="@color/cinza_hint"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/btnComprar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValor" />

    <Button
        android:id="@+id/btnComprar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="312dp"
        android:text="@string/comprar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cbVip"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTaxa" />

    <CheckBox
        android:id="@+id/cbVip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vip"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnComprar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnComprar" />
</androidx.constraintlayout.widget.ConstraintLayout>